# tk24_ws

./: .gitignore  README.md  audio.md  install.md  nav_doc.md  setupcan.sh
install/: local_setup.sh  setup.sh
install/livox_ros_driver2/lib/livox_ros_driver2/: livox_ros_driver2_node
install/livox_ros_driver2/local/lib/python3.10/dist-packages/livox_ros_driver2-1.0.0-py3.10.egg-info/: PKG-INFO
install/livox_ros_driver2/share/livox_ros_driver2/: package.sh
install/tinker_description/share/tinker_description/: package.bash  package.sh  package.zsh
install/tinker_description/share/tinker_description/launch/: display.launch.py
install/tinker_description/share/tinker_description/src/description/: tinker.urdf.xacro
log/: latest_build
src/audio_common/audio_common_msgs/: CMakeLists.txt
src/audio_common/sound_play/: CMakeLists.txt
src/audio_common/sound_play/scripts/: soundclient_example.py  test.py  test_actionlib_client.py
src/chassis/: CMakeLists.txt  package.xml
src/chassis/src/robot/: chassis.cpp  chassis.hpp  hardware.cpp  hardware.hpp  motor.cpp  motor.hpp
src/livox_ros_driver2/: CMakeLists.txt  README.md
src/livox_ros_driver2/config/: MID360_config.json
src/livox_ros_driver2/launch/: 2d_MID360.launch.py
src/realsense-ros/: README.md
src/tinker_chassis_bringup/: CMakeLists.txt  package.xml
src/tinker_chassis_bringup/launch/: chassis_bringup.launch.py  tinker_bringup.launch.py
src/tinker_chassis_controller/: CMakeLists.txt  package.xml
src/tinker_chassis_controller/include/tinker_chassis_controller/: chassis_motor.hpp  odometry.hpp  tinker_chassis_controller.hpp
src/tinker_chassis_controller/src/: chassis_motor.cpp  odometry.cpp  tinker_chassis_controller.cpp
src/tinker_chassis_hardware/: CMakeLists.txt  README.md  package.xml
src/tinker_chassis_hardware/include/motor_interface/: config.hpp  hardware.hpp  motor_interface.hpp
src/tinker_chassis_hardware/src/: hardware.cpp  motor.cpp  motor_interface.cpp
src/tinker_chassis_hardware/src/libcan/: CANAdapter.cpp  CANFrameParser.cpp  SocketCAN.cpp
src/tinker_chassis_hardware/test/: test_load_motor_interface.cpp
src/tinker_description/: CMakeLists.txt
src/tinker_description/config/: robot_controller_config.yaml
src/tinker_description/launch/: display.launch.py
src/tinker_description/src/description/: tinker.urdf.xacro  tinker_chassis.xacro
src/tinker_lidar_processor/: CMakeLists.txt
src/tinker_lidar_processor/include/tinker_lidar_processor/: lidar_decoder.hpp
src/tinker_lidar_processor/src/: lidar_decoder.cpp
src/tinker_lidar_processor/tinker_lidar_processor/: CMakeLists.txt
src/tinker_nav_bringup/: CMakeLists.txt
src/tinker_nav_bringup/launch/: tinker_slam.launch.py
src/tinker_nav_bringup/params/: ekf.yaml  mapper_params_online_async.yaml
src/tinker_vision/object_detection/: package.xml  setup.py
src/tinker_vision/object_detection/object_detection/: test.py  visual.py  yolo_detector.py
src/tinker_vision/point_direction/: package.xml  setup.cfg  setup.py
src/tinker_vision/point_direction/point_direction/: point_direction.py
src/tinker_vision/vision_msgs/: CMakeLists.txt  package.xml
src/tinker_vision/vision_msgs/msg/: Direction.msg  Object.msg  YoloResults.msg
