<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detection</name>
  <version>0.0.0</version>
  <description>Tinker vision package for object detection</description>
  <maintainer email="1060382399@qq.com">qxy</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
